[tool.pdm]
allow_prereleases = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "mypy",
    "flake8",
    "ipython",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Yifan Wu", email = "tyivanwu@gmail.com"},
]
dependencies = [
    "tuna>=0.5.11",
    "line-profiler>=4.0.3",
    "py-spy==0.3.14",
    "snakeviz>=2.2.0",
]
requires-python = ">=3.8.5"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
